1999-07-18  Harlan Stenn  <stenn@whimsy.udel.edu>

	* README.des: Updated.

	* ntpq/Makefile.am (LDADD): Add LIBRSAREF

	* ntpdc/Makefile.am (LDADD): Add LIBRSAREF

	* ntpdate/Makefile.am (LDADD): Add LIBRSAREF

	* ntpd/Makefile.am (LDADD): Add LIBRSAREF

	* configure.in (AC_OUTPUT): Added librsaref/Makefile
	Added tests for making/using librsaref.a
	Lose old DES stuff; AC_DEFINE(DES) if we find the rsaref stuff.

1999-07-11  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_trak.c (trak_receive): disambiguate expression.
	At least now it is unambiguous.  It may even still be correct.
	Reported by: Tom Smith <smith@cag.lkg.dec.com>

	* ntp_update (UPDATE_OPTIONS): Typo.

1999-07-07  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntp_update: Check out copyright.htm before COPYRIGHT

	* ntpd/ntp_config.c: Support for PPS assert/clear/hardpps
	* ntpd/ntp_refclock.c (refclock_ioctl): Ditto
	(refclock_gtlin): Ditto
	* html/clockopt.htm: Document.
	From: John Hay <jhay@mikom.csir.co.za>

        * html/monopt.htm: We have four types of files now
        * ntpd/refclock_oncore.c: If debug is on, tell when
        we are waiting for a valid almanac
	From: Poul-Henning Kamp <phk@critter.freebsd.dk>

	* include/ntp_machine.h (HAVE_TERMIOS): STREAMS does not imply
	HAVE_TERMIOS !!!
	* include/parse.h (timercmp): Macro defined if needed.
	* ntpd/ntp_config.c (SIGCHLD): Macro defined as SIGCLD if needed.
	(sys/wait.h): File included only if HAVE_SYS_WAIT_H.
	* configure.in (sys/wait.h): File added to AC_CHECK_HEADERS list.
	From: Philippe De Muyter  <phdm@macqel.be>

1999-06-23  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_irig.c (irig_debug): NetBSD patches
	From: Frederick Bruckman <fb@enteract.com>

	* util/ntptime.c (main): ntx.freq bugfix (-f option)
	From: Frederick Bruckman <fb@enteract.com>

1999-06-22  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Fix typo with DECL_H_ERRNO test

	* ntpd/ntp_loopfilter.c: Lose syscall decl, it's handled in