@@ -2768,5 +2768,6 @@ AC_OUTPUT(Makefile adjtimed/Makefile clockstuff/Makefile \
 include/Makefile kernel/Makefile kernel/sys/Makefile libntp/Makefile \
 libparse/Makefile librsaref/Makefile ntpd/Makefile ntpdc/Makefile \
 ntpdate/Makefile ntpq/Makefile ntptrace/Makefile parseutil/Makefile \
-scripts/ntpver util/Makefile, [chmod +x scripts/ntpver])
+scripts/mkver scripts/ntpver util/Makefile,
+[chmod +x scripts/ntpver scripts/mkver])
 #test -z "$CONFIG_HEADERS" || echo timestamp > stamp-h])
