@@ -1,0 +1,31 @@
+#!@PATH_SH@
+PROG=${1-UNKNOWN}
+
+ConfStr="$PROG"
+
+case "@RSAREF@" in
+ '') ;;
+ *)  ConfStr="$ConfStr RSAREF" ;;
+esac
+
+ConfStr="$ConfStr @VERSION@ `date`"
+
+if [ ! -f .version ]; then
+  echo 0 > .version
+fi
+RUN="`cat .version`"
+RUN="`expr $RUN + 1`"
+echo $RUN > .version
+
+ConfStr="$ConfStr (${RUN})"
+
+echo "Version <${ConfStr}>";
+
+rm -f version.c
+cat > version.c << -EoF-
+/*
+ * version file for $PROG
+ */
+#include <config.h>
+const char * Version = "${ConfStr}";
+-EoF-
